--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - run: git clone https://github.com/asdf-vm/asdf.git
-      - run: . asdf/asdf.sh
-      - run: asdf plugin add krab https://github.com/qbart/asdf-krab.git
-      - run: asdf install krab 0.2.2
-      - run: asdf global krab 0.2.2
+      - run: . asdf/asdf.sh && asdf plugin add krab https://github.com/ohkrab/asdf-krab.git
+      - run: . asdf/asdf.sh && asdf install krab 0.2.2
+      - run: . asdf/asdf.sh && asdf global krab 0.2.2
 
       - name: test
         run: krab version
