Fix readme and load asdf in test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - run: . asdf/asdf.sh && asdf global krab 0.2.2
 
       - name: test
-        run: krab version
+        run: . asdf/asdf.sh && krab version
