--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - run: git clone https://github.com/asdf-vm/asdf.git
       - run: . asdf/asdf.sh && asdf plugin add krab https://github.com/ohkrab/asdf-krab.git
-      - run: . asdf/asdf.sh && asdf install krab 0.2.2
-      - run: . asdf/asdf.sh && asdf global krab 0.2.2
+      - run: . asdf/asdf.sh && asdf install krab 0.2.3
+      - run: . asdf/asdf.sh && asdf global krab 0.2.3
 
       - name: test
-        run: . asdf/asdf.sh && krab version
+        run: . asdf/asdf.sh && krab --version
